# color_puzzle

./: Makefile  README.md  pyproject.toml  requirements.txt
color_puzzle/: brick.py  main.py  parser.py
color_puzzle/solvers/: full_backtracking.py  greedy.py  greedy_backtracking.py  lib.py
tests/: test_greedy_backtracking_solver.py  test_greedy_solver.py  test_parser.py
